--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@chakra-ui/react": "^2.2.8",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@hookform/error-message": "^2.0.0",
     "framer-motion": "^6",
     "next": "latest",
     "react": "^18.2.0",
