--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "typescript": "4.0"
+  },
+  "engines": {
+    "node": "^16.13.0",
+    "npm": "8.14.0"
   }
 }
